...
              <BookingCard
                booking={item}
                onPress={() => router.push(`/(family)/bookings/${item.id}`)}
              />
            </View>
          )}
          testID="familyBookings_list_bookings"
          refreshControl={
            <RefreshControl refreshing={refreshing} onRefresh={refetch} />
          }
          contentContainerStyle={styles.list}
        />
      )}
...
