...
        <Button
          variant="primary"
          loading={saving}
          disabled={!hasChanges}
          onPress={handleSave}
          style={styles.saveButton}
          testID="availability_button_save"
        >
          Save
        </Button>
      </View>
    </ScreenWrapper>
  );
...
